[gd_scene load_steps=8 format=3 uid="uid://dnbo5cmpcbs5n"]

[ext_resource type="Script" uid="uid://dj5ksad7da23i" path="res://unit/Zombie/Flag_Zombie/flag_zombie.gd" id="1_6f40v"]
[ext_resource type="PackedScene" uid="uid://dlfnwlf3x2t7t" path="res://Behaviour/zombie_movement_management.tscn" id="2_7y5u2"]
[ext_resource type="PackedScene" uid="uid://b8lpneub1dg61" path="res://Behaviour/projectile_behaviour/zombie_hp_management.tscn" id="2_slo2u"]
[ext_resource type="PackedScene" uid="uid://y5yyy3rt1el1" path="res://unit/Zombie/Basic_Zombie_Animation.tscn" id="3_p2fm4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5oqf"]
size = Vector2(115, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8ghd"]
size = Vector2(46, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1b3j"]
size = Vector2(71, 136)

[node name="FlagZombie" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(219, 332)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6f40v")

[node name="zombie_movement_management" parent="." instance=ExtResource("2_7y5u2")]

[node name="zombie_hp_management" parent="." instance=ExtResource("2_slo2u")]

[node name="Bite_Detection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bite_Detection"]
position = Vector2(-21.5, -76)
shape = SubResource("RectangleShape2D_r5oqf")
debug_color = Color(0.504058, 0.0862229, 4.81308e-08, 0.42)

[node name="BasicZombieAnimation" parent="." instance=ExtResource("3_p2fm4")]

[node name="HitPoint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitPoint"]
visible = false
position = Vector2(0, -77)
shape = SubResource("RectangleShape2D_v8ghd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-12.5, -77)
shape = SubResource("RectangleShape2D_j1b3j")

[connection signal="body_entered" from="Bite_Detection" to="." method="_on_bite_detection_body_entered"]
[connection signal="body_exited" from="Bite_Detection" to="." method="_on_bite_detection_body_exited"]
[connection signal="area_shape_entered" from="HitPoint" to="." method="_on_area_2d_area_shape_entered"]
